results/classifier/zero-shot/111/review/1898215
other: 0.099
permissions: 0.096
semantic: 0.094
debug: 0.086
device: 0.083
PID: 0.077
graphic: 0.076
files: 0.065
network: 0.063
boot: 0.056
socket: 0.056
vnc: 0.051
performance: 0.050
KVM: 0.048
debug: 0.452
files: 0.142
PID: 0.119
device: 0.054
other: 0.039
semantic: 0.032
performance: 0.031
graphic: 0.026
network: 0.023
socket: 0.021
boot: 0.017
permissions: 0.017
vnc: 0.016
KVM: 0.012

[git][archlinux]Build process is busted in spice-display.c

Linux distribution: Archlinux. Crash log added is based on a build from scratch.

Gcc version: 10.2.0

Configure options used:

configure \
    --prefix=/usr \
    --sysconfdir=/etc \
    --localstatedir=/var \
    --libexecdir=/usr/lib/qemu \
    --extra-ldflags="$LDFLAGS" \
    --smbd=/usr/bin/smbd \
    --enable-modules \
    --enable-sdl \
    --disable-werror \
    --enable-slirp=system \
    --enable-xfsctl \
    --audio-drv-list="pa alsa sdl"

Crash log:

../ui/spice-display.c: In function 'interface_client_monitors_config':
../ui/spice-display.c:682:25: error: 'VD_AGENT_CONFIG_MONITORS_FLAG_PHYSICAL_SIZE' undeclared (first use in this function); did you mean 'VD_AGENT_CONFIG_MONITORS_FLAG_USE_POS'?
  682 |         if (mc->flags & VD_AGENT_CONFIG_MONITORS_FLAG_PHYSICAL_SIZE) {
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                         VD_AGENT_CONFIG_MONITORS_FLAG_USE_POS
../ui/spice-display.c:682:25: note: each undeclared identifier is reported only once for each function it appears in
../ui/spice-display.c:683:13: error: unknown type name 'VDAgentMonitorMM'
  683 |             VDAgentMonitorMM *mm = (void *)&mc->monitors[mc->num_of_monitors];
      |             ^~~~~~~~~~~~~~~~
../ui/spice-display.c:684:37: error: request for member 'width' in something not a structure or union
  684 |             info.width_mm = mm[head].width;
      |                                     ^
../ui/spice-display.c:685:38: error: request for member 'height' in something not a structure or union
  685 |             info.height_mm = mm[head].height;
      |                                      ^
make: *** [Makefile.ninja:2031: libcommon.fa.p/ui_spice-display.c.o] Error 1
make: *** Waiting for unfinished jobs....

Full build log with make V=1.

This is a bug in the spice-server meson build system:
https://gitlab.freedesktop.org/spice/spice/-/commit/37fd91a51f52cdc1b55d3ce41e6ce6db348b986c

Most likely they will end up bumping the version to 0.15, so we may want to update the condition in qemu.

Already reported to Arch:

https://bugs.archlinux.org/task/68061

The QEMU project is currently moving its bug tracking to another system.
For this we need to know which bugs are still valid and which could be
closed already. Thus we are setting the bug state to "Incomplete" now.

If the bug has already been fixed in the latest upstream version of QEMU,
then please close this ticket as "Fix released".

If it is not fixed yet and you think that this bug report here is still
valid, then you have two options:

1) If you already have an account on gitlab.com, please open a new ticket
for this problem in our new tracker here:

    https://gitlab.com/qemu-project/qemu/-/issues

and then close this ticket here on Launchpad (or let it expire auto-
matically after 60 days). Please mention the URL of this bug ticket on
Launchpad in the new ticket on GitLab.

2) If you don't have an account on gitlab.com and don't intend to get
one, but still would like to keep this ticket opened, then please switch
the state back to "New" or "Confirmed" within the next 60 days (other-
wise it will get closed as "Expired"). We will then eventually migrate
the ticket automatically to the new system (but you won't be the reporter
of the bug in the new system and thus you won't get notified on changes
anymore).

Thank you and sorry for the inconvenience.


Fix released

